Remove (for now) the `add-modules` option. Its presence in `module-info-patch` may be confusing because it is a global option rather than an option configured on a per-module basis. Furthermore, its value is fully controlled by the list of Maven dependencies with test scope and there is usually no need to modify.